deploymentOnly.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: demosite
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: demosite
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: demosite
    labels:
      app: demosite
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: demosite
    template:
      metadata:
        labels:
          app: demosite
      spec:
        containers:
        - image: quay.io/daanders/demosite:0.2
          name: demosite
          ports:
          - containerPort: 8080
            protocol: TCP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: demosite
    name: demosite
  spec:
    path: /hello
    port:
      targetPort: 8080
    to:
      kind: Service
      name: demosite
      weight: 100
